--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 SDKs/modules
 SDKs/VST3_SDK
+SDKs/Spatial_Audio_Framework
 audio_plugins/_SPARTA_ambiDEC_/obj
 audio_plugins/_SPARTA_ambiENC_/obj
 audio_plugins/_SPARTA_array2sh_/obj
@@ -67,3 +68,4 @@ ipch/
 *.su
 *.idb
 *.pdb
+
