--- a/audio_plugins/_SPARTA_ambiDRC_/make/win64/VisualStudio2015/sparta_ambiDRC_SharedCode.vcxproj.filters
+++ b/audio_plugins/_SPARTA_ambiDRC_/make/win64/VisualStudio2015/sparta_ambiDRC_SharedCode.vcxproj.filters
@@ -2361,6 +2361,9 @@
     <ClInclude Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_veclib.h">
       <Filter>sparta_ambiDRC\Spatial_Audio_Framework\framework\saf_utilities</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_vbap\convhull_3d.h">
+      <Filter>sparta_ambiDRC\Spatial_Audio_Framework\framework\saf_vbap</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_vbap\saf_vbap_internal.h">
       <Filter>sparta_ambiDRC\Spatial_Audio_Framework\framework\saf_vbap</Filter>
     </ClInclude>
